--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,5 +157,5 @@ jobs:
     steps:
       - name: Test if compatibility-test passed
         run: |
-          echo "${{ needs.compatibility-test.result }}"
-          test "${{ needs.compatibility-test.result" }} == "success"
+          echo ${{ needs.compatibility-test.result }}
+          test ${{ needs.compatibility-test.result" }} == "success"
