--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,4 +158,4 @@ jobs:
       - name: Test if compatibility-test passed
         run: |
           echo ${{ needs.compatibility-test.result }}
-          test ${{ needs.compatibility-test.result" }} == "success"
+          test ${{ needs.compatibility-test.result }} == "success"
