--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.DEFAULT_GO_VERSION }}
+          cache-dependency-path: '**/go.sum'
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Setup Environment
@@ -57,6 +58,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.DEFAULT_GO_VERSION }}
+          cache-dependency-path: '**/go.sum'
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Setup Environment
@@ -80,6 +82,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.DEFAULT_GO_VERSION }}
+          cache-dependency-path: '**/go.sum'
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Setup Environment
@@ -132,6 +135,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
+          cache-dependency-path: '**/go.sum'
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Setup Environment
